# suli

./: LICENSE  README.md  suli.cabal
app/: Main.hs
src/Suli/Nyelv/: Verslab.hs
test/: Spec.hs
