name:                suli
version:             0.1.0.0
synopsis:            Érdekességek a sulipadból.
description:         Lásd README.md
homepage:            https://github.com/haskell-hu/suli#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2016 Robin Palotai
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Suli.Nyelv.Verslab
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

executable suli-fut
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , suli
  default-language:    Haskell2010

test-suite suli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , suli
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-hu/suli
